# WaveFunctionCollapse

./: CMakeLists.txt
Header/: FileHandler.h
headers/: FileParser.h  Image.h  ImageFactory.h
resources/: output
src/: FIleHandler.cpp  FIleParser.cpp  Image.cpp  ImageContainer.cpp  ImageFactory.cpp  ImageLoader.py  main.cpp
